--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <section id="demo" class="demo">
   <h2>Send Your Demo</h2>
   <div style="text-align: center;">
-    <button onclick="window.location.href='https://your-link-here.com'">
+    <button onclick="window.location.href='https://form.jotform.com/251406878889073'">
       Send Demo to Label
     </button>
   </div>
