--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
     </button>
   </div>
 </section>
-
+<section class="contact">
+  <h2>Contact</h2>
+  <p><strong>Owner Email:</strong> <a href="mailto:max@yakeirecords.com">max@yakeirecords.com</a></p>
+  <p><strong>Label Email:</strong> <a href="mailto:contact@yakeirecords.com">contact@yakeirecords.com</a></p>
+</section>
   <footer>
     <p>© 2025 Yakei Records. All rights reserved.</p>
   </footer>
