--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 </section>
 <section class="contact">
   <h2>Contact</h2>
-  <p><strong>Owner Email:</strong> <a href="mailto:max@yakeirecords.com">max@yakeirecords.com</a></p>
-  <p><strong>Label Email:</strong> <a href="mailto:contact@yakeirecords.com">contact@yakeirecords.com</a></p>
+  <p><strong>Owner Email:</strong> <a href="mailto:enderprice2@gmail.com">enderprice2@gmail.com</a></p>
+  <p><strong>Label Email:</strong> <a href="mailto:yakeirecords@proton.me">yakeirecords@proton.me</a></p>
 </section>
   <footer>
     <p>© 2025 Yakei Records. All rights reserved.</p>
